DisplayListRecorder implementations are not able to obtain extra information out of source ImageBuffers https://bugs.webkit.org/show_bug.cgi?id=236296

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2022-02-09
Reviewed by Wenson Hsieh.

Source/WebCore:

Pass ImageBuffer& to various recording commands instead of the resource identifier.
This way implementations of DisplayListRecorder can obtain additional information
about the ImageBuffer, such as dependency information. This additional information is
not neccessarily needed for in-process display lists.

* platform/graphics/displaylists/DisplayListRecorder.cpp:
(WebCore::DisplayList::Recorder::drawFilteredImageBuffer):
(WebCore::DisplayList::Recorder::drawImageBuffer):
(WebCore::DisplayList::Recorder::clipToImageBuffer):
* platform/graphics/displaylists/DisplayListRecorder.h:
* platform/graphics/displaylists/DisplayListRecorderImpl.cpp:
(WebCore::DisplayList::RecorderImpl::recordClipToImageBuffer):
(WebCore::DisplayList::RecorderImpl::recordDrawFilteredImageBuffer):
(WebCore::DisplayList::RecorderImpl::recordDrawImageBuffer):
* platform/graphics/displaylists/DisplayListRecorderImpl.h:

Source/WebKit:

RecorderImpl now passes ImageBuffers to the DisplayListRecorder calls.
Use the ImageBuffer& to get the resource identifier.
In future commits these places will obtain the read references, which
record the depenedency information needed for RemoteImageBuffers
created in multiple threads.

* WebProcess/GPU/graphics/RemoteDisplayListRecorderProxy.cpp:
(WebKit::RemoteDisplayListRecorderProxy::recordClipToImageBuffer):
(WebKit::RemoteDisplayListRecorderProxy::recordDrawFilteredImageBuffer):
(WebKit::RemoteDisplayListRecorderProxy::recordDrawImageBuffer):
* WebProcess/GPU/graphics/RemoteDisplayListRecorderProxy.h:


Canonical link: https://commits.webkit.org/247030@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289492 268f45cc-cd09-0410-ab3c-d52691b4dbfc