Source/WebCore/platform/graphics/displaylists/DisplayListRecorderImpl.cpp
@@ -168,9 +168,9 @@ void RecorderImpl::recordClipOut(const FloatRect& clipRect)
     append<ClipOut>(clipRect);
 }
 
-void RecorderImpl::recordClipToImageBuffer(RenderingResourceIdentifier imageBufferIdentifier, const FloatRect& destinationRect)
+void RecorderImpl::recordClipToImageBuffer(ImageBuffer& imageBuffer, const FloatRect& destinationRect)
 {
-    append<ClipToImageBuffer>(imageBufferIdentifier, destinationRect);
+    append<ClipToImageBuffer>(imageBuffer.renderingResourceIdentifier(), destinationRect);
 }
 
 void RecorderImpl::recordClipOutToPath(const Path& path)
@@ -193,9 +193,12 @@ void RecorderImpl::recordEndClipToDrawingCommands(const FloatRect& destination)
     append<EndClipToDrawingCommands>(destination);
 }
 
-void RecorderImpl::recordDrawFilteredImageBuffer(std::optional<RenderingResourceIdentifier> sourceImageIdentifier, const FloatRect& sourceImageRect, Filter& filter)
+void RecorderImpl::recordDrawFilteredImageBuffer(ImageBuffer* sourceImage, const FloatRect& sourceImageRect, Filter& filter)
 {
-    append<DrawFilteredImageBuffer>(sourceImageIdentifier, sourceImageRect, filter);
+    std::optional<RenderingResourceIdentifier> identifier;
+    if (sourceImage)
+        identifier = sourceImage->renderingResourceIdentifier();
+    append<DrawFilteredImageBuffer>(WTFMove(identifier), sourceImageRect, filter);
 }
 
 void RecorderImpl::recordDrawGlyphs(const Font& font, const GlyphBufferGlyph* glyphs, const GlyphBufferAdvance* advances, unsigned count, const FloatPoint& localAnchor, FontSmoothingMode mode)
@@ -203,9 +206,9 @@ void RecorderImpl::recordDrawGlyphs(const Font& font, const GlyphBufferGlyph* gl
     append<DrawGlyphs>(font, glyphs, advances, count, localAnchor, mode);
 }
 
-void RecorderImpl::recordDrawImageBuffer(RenderingResourceIdentifier imageBufferIdentifier, const FloatRect& destRect, const FloatRect& srcRect, const ImagePaintingOptions& options)
+void RecorderImpl::recordDrawImageBuffer(ImageBuffer& imageBuffer, const FloatRect& destRect, const FloatRect& srcRect, const ImagePaintingOptions& options)
 {
-    append<DrawImageBuffer>(imageBufferIdentifier, destRect, srcRect, options);
+    append<DrawImageBuffer>(imageBuffer.renderingResourceIdentifier(), destRect, srcRect, options);
 }
 
 void RecorderImpl::recordDrawNativeImage(RenderingResourceIdentifier imageIdentifier, const FloatSize& imageSize, const FloatRect& destRect, const FloatRect& srcRect, const ImagePaintingOptions& options)
